--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   assets_audio_player: ^2.0.6+4
   flutter_audio_query: ^0.3.4+1
+  flare_flutter: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/cassette.flr
+    - assets/arrow.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
